# PyTrader

./: .project  README.md
vn.archive/vn.cs/vncshshlp/test/: cstest.py
vn.archive/vn.lts_old/vnltsl2/test/: l2test.py
vn.archive/vn.lts_old/vnltsmd/test/: mdtest.py
vn.archive/vn.lts_old/vnltstd/test/: tdtest.py
vn.archive/vn.strategy/: backtestingEngine.py  strategyEngine.py
vn.archive/vn.strategy/strategydemo/: demoBacktesting.py  demoEngine.py  demoStrategy.py  eventType.py  strategyEngine.py
vn.ctp/: CMakeLists.txt  readme.md
vn.ctp/vnctpmd/vnctpmd/: vnctpmd.cpp  vnctpmd.h
vn.demo/ctpdemo/: demoApi.py  demoEngine.py  demoUi.py
vn.demo/ltsdemo/: demoApi.py  demoEngine.py  demoUi.py  eventEngine.py
vn.event/: eventEngine.py  eventType.py
vn.how/tick2trade/vn.trader_t2t/: eventEngine.py  eventType.py  uiBasicWidget.py  uiMainWindow.py  vtConstant.py  vtEngine.py  vtFunction.py  vtMain.py
vn.how/tick2trade/vn.trader_t2t/ctaAlgo/: ctaEngine.py  ctaHistoryData.py  ctaSetting.py  strategyAtrRsi.py
vn.how/tick2trade/vn.trader_t2t/ctaAlgo/tools/: ctaLineBar.py
vn.how/tick2trade/vn.trader_t2t/ctaAlgo/tools/multiTimeFrame/: ctaBacktestMultiTF.py  ctaStrategyMultiTF.py
vn.how/tick2trade/vn.trader_t2t/ctpGateway/: ctpGateway.py
vn.how/tick2trade/vn.trader_t2t/dataRecorder/: drEngine.py
vn.how/tick2trade/vn.trader_t2t/riskManager/: uiRmWidget.py
vn.oanda/: test.py
vn.okcoin/: test.py
vn.rpc/: testClient.py  testServer.py  vnrpc.py
vn.sgit/4.1/pyscript/: generate_data_type.py  generate_md_functions.py  generate_struct.py  generate_td_functions.py
vn.trader/: eventEngine.py  eventType.py  uiBasicWidget.py  uiMainWindow.py  vtClient.py  vtConstant.py  vtEngine.py  vtFunction.py  vtMain.py  vtPath.py  vtServer.py
vn.trader/ctaAlgo/: ctaBacktesting.py  ctaBase.py  ctaDemo.py  ctaEngine.py  ctaTemplate.py  datayesClient.py  strategyAtrRsi.py  uiCtaWidget.py
vn.trader/ctpGateway/: CTP_connect.json  ctpGateway.py  vnctpmd.pyd  vnctptd.pyd
vn.trader/dataRecorder/: drBase.py  uiDrWidget.py
vn.trader/femasGateway/: femasGateway.py
vn.trader/ibGateway/: ibGateway.py
vn.trader/ksgoldGateway/: ksgoldGateway.py
vn.trader/ksotpGateway/: ksotpGateway.py
vn.trader/ltsGateway/: ltsGateway.py
vn.trader/oandaGateway/: oandaGateway.py  vnoanda.py
vn.trader/okcoinGateway/: okcoinGateway.py
vn.trader/qdpGateway/: qdpGateway.py
vn.trader/riskManager/: rmEngine.py
vn.trader/sgitGateway/: sgitGateway.py
vn.trader/sgitGateway/sgitGateway_4.1/: sgitGateway.py
vn.trader/shzdGateway/: shzdGateway.py
vn.trader/windGateway/: windGateway.py
vn.trader/xspeedGateway/: xspeedGateway.py
